@@ -1,3 +1,7 @@
+2017-07-05 Michele Pinamonti <michele.pinamonti@gmail.com>
+    * merge with FixNP by Roger (fixes TTHFITTER-141)
+    * fix bug blinding in summary plots
+    
 2017-07-03 Michele Pinamonti <michele.pinamonti@gmail.com>
     * RooStats::UseNLLOffset(true) added (as per e-mail reommending it)
     * Add NtupleNamesUp/Down and NtuplePathsUp/Down options for systematics in config
